# workflows

./: .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  pyproject.toml  util.py
hooks/: convert_tabs_to_spaces.py  verify_branch_name.py  verify_commit_author.py
schemas/: m1cfg.xsd  m1prj.xsd
validate-m1cfg/: action.yml  main.py
